# backend/api/openapi.yaml
@@ -64,7 +64,9 @@ components:
           description: Optional list of individual error details
           items:
             $ref: "#/components/schemas/ErrorDetail"
-          type: array
+          type:
+            - array
+            - "null"
         instance:
           description: A URI reference that identifies the specific occurrence of the problem.
           examples:
@@ -114,13 +116,6 @@ components:
     HealthCheckResponseBody:
       additionalProperties: false
       properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - http://localhost:6500/api/v1/schemas/HealthCheckResponseBody.json
-          format: uri
-          readOnly: true
-          type: string
         message:
           type: string
       required:
@@ -132,6 +127,14 @@ components:
       scheme: bearer
       type: http
 info:
+  contact:
+    email: naohito.tanaka0523@gmail.com
+    name: naohito-T
+    url: https://naohito-t.github.io/
+  description: This is a simple URL shortener service.
+  license:
+    name: MIT
+    url: https://opensource.org/licenses/MIT
   title: TinyURL API
   version: 1.0.0
 openapi: 3.1.0
@@ -139,28 +142,42 @@ paths:
   /health:
     get:
       description: Check the health of the service.
-      operationId: health
+      operationId: health-check
       parameters:
-        - description: Optional database check parameter
+        - description: Optional DynamoDB check parameter
           explode: false
           in: query
           name: q
           schema:
-            description: Optional database check parameter
+            description: Optional DynamoDB check parameter
             type: boolean
       responses:
         "200":
           content:
             application/json:
+              example: "{message: ok}"
               schema:
-                $ref: "#/components/schemas/HealthCheckResponseBody"
-          description: OK
-        default:
+                properties:
+                  message:
+                    type: string
+                type: object
+          description: Health check successful
+        "503":
           content:
             application/problem+json:
               schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
+                properties:
+                  detail:
+                    type: string
+                  status:
+                    type: integer
+                  title:
+                    type: string
+                  type:
+                    format: uri
+                    type: string
+                type: object
+          description: Service unavailable
       summary: Health Check
       tags:
         - Public
@@ -168,6 +185,13 @@ paths:
     post:
       description: Create a short URL.
       operationId: create-tinyurl
+      parameters:
+        - description: ID of the short URL
+          in: path
+          name: id
+          required: true
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
@@ -181,12 +205,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/CreateTinyURLResponseBody"
           description: OK
-        default:
-          content:
-            application/problem+json:
+        "201":
+          description: Created short URL
+          headers:
+            Location:
+              description: Location of the original URL
               schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
+                format: uri
+                type: string
+        "500":
+          content:
+            text/plain:
+              schema:
+                type: string
+          description: Failed to create short URL
       summary: Create a short URL
       tags:
         - Public
@@ -256,5 +288,10 @@ paths:
       tags:
         - Public
 servers:
-  - url: http://localhost:6500/api/v1
+  - description: Local API Server
+    url: http://localhost:6500/api/v1
+  - description: Dev API Server
+    url: http://localhost:6500/api/v1
+  - description: Prod API Server
+    url: http://localhost:6500/api/v1
 
